app/lines/css/app.css
/* ... */
table.matrix td div.wide-td{
  max-width: 300px;
  overflow-x: scroll;
}
table.matrix td div.tall-td{
  max-height: 110px;
  overflow-y: scroll;
}
table.matrix td div.chevron span{
    font-size: 80%;
    margin-left: 50px;
}
table.matrix td div.bottom-chevron{
    margin-top: 4px;
}

table.matrix td.matrix-dot .matrix-dot-item:hover {
  background-color: #b3d4fc;
}

table.matrix td.matrix-dot .matrix-dot-item {
  text-align: center;
  margin: -8px -8px -108px;
  padding-bottom: 100px;
  line-height: 36px;
  display: block;
}
table.matrix td.matrix-dot a{
  color: #333;
  text-decoration:none;
}

table.matrix td.matrix-dot .assay{
  color: #B67E9C;
  font-size: 20px;
}
table.matrix td.matrix-dot .biosample{
  color: #99B397;
  font-size: 20px;
}
table.matrix td.matrix-dot .matrix-dot-orange{
  color: #E99D83;
  font-size: 20px;
}

table.matrix td .bank-selected {
  color: red;
  font-weight: bold;
}
table.matrix td .banked-ecacc {
  color: GoldenRod;
  font-weight: bold;
}
table.matrix td .banked-ebisc {
  color: green;
  font-weight: bold;
}

/* layout for matrix and files page with fixed width lhs column */
@media (min-width: 992px) { /* @screen-md-min */
  .fixd-width-lhs {
    width: 320px;
  }

  .fixd-width-rhs {
    float: none;
    margin-left: 320px;
    width: auto;
  }
}
/* logo to replace nav bar on printed page */
.print-only-logo {
  display: none;
  padding: 0 15px 15px;
}

@media print {
  .print-only-logo {
    display: block;
  }
}
/* row with same height panels */
.flex-row, .flex-row > div[class*='col-']  {
  display: -webkit-flex;
  display: flex;
}

@media (max-width: 767px) { /* @screen-xs-max */
  .flex-row, .flex-row > div[class*='col-']  {
    display: block;
  }
}




div.item-detail-img {
    padding-top: 25px;
    padding-left: 25px;
    padding-right: 25px;
}
h3.item-detail-section {
    padding-top: 40px;
}

div.search-box > input {
    height: 25px;
    width: 250px;
}

ul.dropdown-menu div.checkbox {
    margin-left: 5px;
}



/* sum HipSci branding with colours */
.navbar {
    background: linear-gradient(to bottom, #E8F5FA 0%, #DBE6EA 100%) repeat scroll 0% 0% transparent;
}
.navbar-nav > .active >a {
    background-image: linear-gradient(to bottom, #E8F5FA, #F9F9F9 100%);
    color: black;
    outline: none;
    cursor: default;
}
.nav >li >a:focus {
    background-color: transparent;
}
.nav >li > a:hover {
    background-image: linear-gradient(to bottom, #E8F5FA, #F9F9F9 100%);
}
.navbar-nav a{
    color: #6D6E71;
}
.navbar-tagline h3 {
    color: #6D6E71;
    font-weight: normal;
}
.navbar .icon-bar {
    background-color: #6D6E71;
}





@media (min-width: 992px) { /* @screen-md-min */
    .navbar {
        min-height: 60px;
        border-bottom: 0px;
    }
    .navbar-brand {
        height: auto;
        margin-left: 5px;
        margin-right: 20px;
        padding-top: 10px;
        padding-bottom: 10px
    }
    .nav >li >a {
        padding-top: 11px;
        padding-bottom: 11px;
    }
    .navbar-brand img {
        height: 60px;
    }
    .navbar-tagline {
        margin-top:10px;
    }
    .navbar-tagline h3 {
        margin-top: 3px;
        margin-bottom: 3px;
        padding-left: 15px;
    }
    .container-fluid > .navbar-collapse{
        margin-top:10px;
        height: auto;
    }
}

@media (max-width: 991px) { /* @screen-md-min */
    .navbar-tagline {
        display: none;
    }
    .navbar-brand {
        height: auto;
        margin-left: 5px;
        margin-right: 20px;
        padding-top: 5px;
        padding-bottom: 5px
    }
    .navbar-brand img {
        height: 40px;
    }
}

a.purchase-btn {
  margin-left: 30px;
}

.panel-body h1 {
  margin: 0 0 10px;
}

@media (min-width: 768px) { /* @screen-sm-min */
  div.dismiss-button-container {
    margin-top: 14px;
  }
}
div.dismiss-button-container {
  margin-bottom: 14px;
}

ul.data-portal-nav-tabs {
  border-bottom: 0;
  margin-top: 0;
}



/* styles provided by conceptstore */
@font-face{
        font-family: 'pontiac_regular-webfont';
        src: url('pontiac_regular-webfont.eot');
        src: url('pontiac_regular-webfont.eot?#iefix') format('embedded-opentype'),
             url('pontiac_regular-webfont.woff') format('woff'),
             url('pontiac_regular-webfont.ttf') format('truetype'),
             url('pontiac_regular-webfont.svg#webfont') format('svg');
}
@font-face{
        font-family: 'pontiac_bold-webfont';
        src: url('pontiac_bold-webfont.eot');
        src: url('pontiac_bold-webfont.eot?#iefix') format('embedded-opentype'),
             url('pontiac_bold-webfont.woff') format('woff'),
             url('pontiac_bold-webfont.ttf') format('truetype'),
             url('pontiac_bold-webfont.svg#webfont') format('svg');
}

#footer, #topmenu {
  background:#252525;
  color:#fff;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 400;
  letter-spacing: 1.5px;
}
#footer {
  text-align:center;
  font-family:"pontiac_regular-webfont", Arial, sans-serif;
}

#footer > .container-fluid, #topmenu > .container-fluid {
  max-width: 1200px;
}
@media (min-width: 768px) {
  #footer > .container-fluid, #topmenu > .container-fluid  {
    width: 80%;
    padding: 0;
  }
}
#footer h5 {
  text-transform: uppercase;
  font-size: 1.1em;
}

#footerbox {
  padding-top: 100px;
}
#foot1 {
  font-size: 0.9em;
}
#foot1 ul {
  padding-left: 0;
}
#foot1 ul li {
  list-style-type: none;
  padding-bottom: 1em;
}
#foot1 a{
  text-decoration: none;
  color: inherit;
}
#disc {
  padding: 100px 0 50px;
  clear: both;
  font-size: 0.8em;
}

#topmenu {
  position:fixed;
  top: 0; left: 0; right: 0;
  z-index: 9999;
  font-family:"pontiac_bold-webfont", Arial, sans-serif;
}
#logo {
  padding-top: 10px;
  padding-bottom: 5px;
}
#logo a {
  display: block;
}
#menu {
  padding-top: 5px;
  text-align: right;
}
/* ... */

